--- a/hoggax pagina 8/index.css
+++ b/hoggax pagina 8/index.css
@@ -1,32 +1,28 @@
-.header{
-    position: fixed;
-    width: 100%;
-    justify-content: center;
-}
 
-nav {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
+ nav {
+     width: 100%;
+     display: flex;
+     justify-content: center;
+ }
 
-.contenidoHeader {
-    z-index: 2;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
 
-.blureado {
-    z-index: 2;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
+ .contenido {
+     line-height: 0;
+     z-index: 2;
+     width: 100%;
+     display: flex;
+     justify-content: center;
+ }
 
-.garantia {
-    z-index: 2;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
+ .rigth .left {
+     max-width: 1024px;
+     margin: 10px;
+ }
+
+ .reseña>.contenedorImagen {
+     margin: 10px;
+ }
+
+ .recomieda>.contenedorImagen {
+     margin: 10px;
+ }
